--- a/src/templates/_/body.pug
+++ b/src/templates/_/body.pug
@@ -6,7 +6,7 @@ block body
 
         block header
 
-            +header-1("/#front", "header-1-logo", "Header", [
+            +header-1("/#front", "header-1-logo", "Entity eCommerce", [
                 {
                     href: "/#section-1",
                     name: "Section 1"
