--- a/src/templates/views/_/front.pug
+++ b/src/templates/views/_/front.pug
@@ -2,15 +2,16 @@ section(class="canvas front" id="front")
 
     div(class="content")
 
-        h2 Headline
+        h2 Entity eCommerce
 
         div
 
-            p Good spot for a tagline.
+            p Lets get to work. 
 
             div
 
-                a(href="#section-2") Button 1
-                a(href="#section-3") Button 2
+                a(href="#section-2") Audit
+                a(href="#section-3") Consult
+                a(href="#section-1") About
 
     +nav-1("section-1")
