home tile styling
hts

--- a/src/styles/views/home/_front.styl
+++ b/src/styles/views/home/_front.styl
@@ -3,7 +3,7 @@
         flex-flow: column wrap
         align-items: center
         justify-content: center
-        +min(2)
+        +min(3)
             margin-top: -20px
         h2
             font-size: 4.3rem
@@ -45,10 +45,10 @@
                 flex-flow: row wrap
                 justify-content: center
                 width: 100%
-                +min(1)
+                +min(3)
                     width: auto
                 a
-                    button(large, color: mediumseagreen)
+                    button(large, color: black)
                     margin: rem(8px) 0
                     min-width: 60%
                     +min(1)
