--- a/src/styles/views/home/_front.styl
+++ b/src/styles/views/home/_front.styl
@@ -40,6 +40,9 @@
                     font-size: 2.6rem
                 +min(3)
                     font-size: 2.8rem
+
+
+                    // this seciton is the home page tiles 
             div
                 display: flex
                 flex-flow: row wrap
@@ -50,11 +53,11 @@
                 a
                     button(large, color: black)
                     margin: rem(8px) 0
-                    min-width: 60%
+                    min-width: 20%
                     +min(1)
                         min-width: auto
                         font-size: 1.2rem
-                        margin: 0
+                        margin: 1
                         padding: rem(16px) rem(35px)
                         &:first-of-type
                             margin-right: rem(14px)
