--- a/src/styles/views/home/_front.styl
+++ b/src/styles/views/home/_front.styl
@@ -42,7 +42,6 @@
                     font-size: 2.8rem
 
 
-                    // this seciton is the home page tiles 
             div
                 display: flex
                 flex-flow: row wrap
@@ -51,13 +50,13 @@
                 +min(3)
                     width: auto
                 a
-                    button(large, color: black)
-                    margin: rem(8px) 0
-                    min-width: 20%
+                    button(large, color: yellow)
+                    margin: rem(8px) 8
+                    min-width: 50%
                     +min(1)
                         min-width: auto
                         font-size: 1.2rem
-                        margin: 1
+                        margin: 0
                         padding: rem(16px) rem(35px)
                         &:first-of-type
                             margin-right: rem(14px)
