--- a/src/styles/views/home/_front.styl
+++ b/src/styles/views/home/_front.styl
@@ -50,7 +50,7 @@
                 +min(3)
                     width: auto
                 a
-                    button(large, color: yellow)
+                    button(large, color: black)
                     margin: rem(8px) 8
                     min-width: 50%
                     +min(1)
@@ -58,7 +58,7 @@
                         font-size: 1.2rem
                         margin: 0
                         padding: rem(16px) rem(35px)
-                        &:first-of-type
+               //         &:first-of-type
                             margin-right: rem(14px)
                     +min(2)
                         font-size: 1.25rem
