--- a/src/styles/views/home/_front.styl
+++ b/src/styles/views/home/_front.styl
@@ -63,6 +63,7 @@
                     +min(2)
                         font-size: 1.25rem
                         padding: rem(17px) rem(36px)
+                        margin-right: rem(14px)
                     +min(3)
                         font-size: 1.32rem
                         padding: rem(18px) rem(38px)
