content and styling ammends
content and styling ammends

--- a/src/templates/views/_/section-1.pug
+++ b/src/templates/views/_/section-1.pug
@@ -1,6 +1,6 @@
 section(class="canvas section-1" id="section-1")
 
-    h2 Section 1
+    h2 About Entity eCommerce
 
     div(class="content")
 
@@ -10,10 +10,10 @@ section(class="canvas section-1" id="section-1")
 
             article
 
-                h2 Titulus
+                h2 A unique analytical method
 
                 p.
-                    At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis,
-                    praesentium voluptatum deleniti atque corrupti quos dolores et quas.
+                    Employing a unique and personally developed analytical method.
+                    Entity eCommerce drives development from revenue based oppertunities to push your business further. 
 
     +nav-1("section-2")
