--- a/src/styles/views/home/_front.styl
+++ b/src/styles/views/home/_front.styl
@@ -61,8 +61,9 @@
                         &:first-of-type
                             margin-right: rem(14px)
                     +min(2)
+                        min-width: auto
                         font-size: 1.25rem
-                        padding: rem(17px) rem(36px)
+                        padding: rem(16px) rem(35px)
                         margin: 0 
                         margin-right: rem(14px)
                     +min(3)
