--- a/src/styles/views/home/_front.styl
+++ b/src/styles/views/home/_front.styl
@@ -62,10 +62,11 @@
                             margin-right: rem(14px)
                     +min(2)
                         min-width: auto
-                        font-size: 1.25rem
+                        font-size: 1.2rem
                         padding: rem(16px) rem(35px)
                         margin: 0 
-                        margin-right: rem(14px)
+                         &:first-of-type
+                            margin-right: rem(14px)
                     +min(3)
                         font-size: 1.32rem
                         padding: rem(18px) rem(38px)
