--- a/src/styles/views/home/_front.styl
+++ b/src/styles/views/home/_front.styl
@@ -64,6 +64,7 @@
                         min-width: auto
                         font-size: 1.2rem
                         padding: rem(16px) rem(35px)
+                        padding-top: 15px 
                         margin: 0 
                         margin-right: rem(14px)
                     +min(3)
