--- a/src/styles/views/home/_front.styl
+++ b/src/styles/views/home/_front.styl
@@ -52,13 +52,13 @@
                 a
                     button(large, color: black)
                     margin: rem(8px) 8
+                    margin-top: 15px
                     min-width: 50%
                     +min(1)
                         min-width: auto
                         font-size: 1.2rem
                         margin: 0
                         padding: rem(16px) rem(35px)
-                        padding-top: 15px 
                         &:first-of-type
                             margin-right: rem(14px)
                     +min(2)
