--- a/src/styles/views/home/_front.styl
+++ b/src/styles/views/home/_front.styl
@@ -50,7 +50,7 @@
                 +min(3)
                     width: auto
                 a
-                    button(large, color: black)
+                    button(large, color: green)
                     margin: rem(8px) 8
                     margin-top: 15px
                     min-width: 50%
