--- a/src/styles/views/home/_front.styl
+++ b/src/styles/views/home/_front.styl
@@ -46,6 +46,7 @@
                 display: flex
                 flex-flow: row wrap
                 justify-content: center
+                top: 25px
                 width: 100%
                 +min(3)
                     width: auto
@@ -65,7 +66,6 @@
                         font-size: 1.2rem
                         padding: rem(16px) rem(35px)
                         margin: 0 
-                        margin-top: 1500px
                         margin-right: rem(14px)
                     +min(3)
                         font-size: 1.32rem
