--- a/src/styles/views/home/_front.styl
+++ b/src/styles/views/home/_front.styl
@@ -46,7 +46,7 @@
                 display: flex
                 flex-flow: row wrap
                 justify-content: center
-                top: 25px
+                margin-top: 150px
                 width: 100%
                 +min(3)
                     width: auto
