--- a/src/styles/views/home/_front.styl
+++ b/src/styles/views/home/_front.styl
@@ -66,4 +66,7 @@
                         padding: rem(16px) rem(35px)
                         margin: 0 
                         margin-right: rem(14px)
-
+                    +min(3)
+                        font-size: 1.32rem
+                        margin-top: 30px
+                        padding: rem(18px) rem(38px)
