--- a/src/templates/_/head.pug
+++ b/src/templates/_/head.pug
@@ -3,12 +3,12 @@ head
     meta(charset="utf-8")
 
     block description
-        meta(name="description" content="Describe the document.")
+        meta(name="Entity eCommerce" content="Entity eCommerce Audit and Consulting Services")
 
     meta(name="viewport" content="width=device-width, initial-scale=1, maximum-scale=2, minimum-scale=0.5")
     meta(name="generator" content="Platframe")
 
-    title= pageTitle || "Default Title"
+    title= pageTitle || "Entity eCommerce"
 
     block links
         - if (ENV === 'production')
