--- a/src/templates/_/head.pug
+++ b/src/templates/_/head.pug
@@ -18,3 +18,13 @@ head
 
     block scripts
         script(defer src=`/assets/logic/js/root.js?v=${ TIME }`)
+        
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-135780192-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-135780192-2');
+</script>
