--- a/src/templates/_/head.pug
+++ b/src/templates/_/head.pug
@@ -19,11 +19,10 @@ head
     block scripts
         script(defer src=`/assets/logic/js/root.js?v=${ TIME }`)
 
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-135780192-2"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
+script (async src="https://www.googletagmanager.com/gtag/js?id=UA-135780192-2")
+script
+  (window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'UA-135780192-2');
-</script>
+  gtag('config', 'UA-135780192-2');)
