--- a/src/components/footers/1/_.pug
+++ b/src/components/footers/1/_.pug
@@ -47,7 +47,7 @@ footer(
                     svg: use(xlink:href="/assets/images/_sprites/symbols.svg#footer-1-rollover")
                     span Caption #[br]05
 
-        div(itemscope itemtype="http://schema.org/LocalBusiness")
+       // div(itemscope itemtype="http://schema.org/LocalBusiness")
 
             table
 
