--- a/src/templates/_/head.pug
+++ b/src/templates/_/head.pug
@@ -6,7 +6,7 @@ head
         meta(name="Entity eCommerce" content="Entity eCommerce Audit and Consulting Services")
 
     meta(name="viewport" content="width=device-width, initial-scale=1, maximum-scale=2, minimum-scale=0.5")
-    meta(name="generator" content="Platframe")
+    meta(name="generator" content="Frames")
 
     title= pageTitle || "Entity eCommerce"
 
