--- a/src/components/footers/1/_.pug
+++ b/src/components/footers/1/_.pug
@@ -47,30 +47,27 @@ footer(
                     svg: use(xlink:href="/assets/images/_sprites/symbols.svg#footer-1-rollover")
                     span Caption #[br]05
 
-       // div(itemscope itemtype="http://schema.org/LocalBusiness")
+        div(itemscope itemtype="http://schema.org/LocalBusiness")
 
             table
 
                 thead
-                    tr: th(colspan="2" class="org" translate="no" itemprop="name") Ordinem Nomine
+                    tr: th(colspan="2" class="org" translate="no" itemprop="name") Entity eCommerce
 
                 tbody(itemprop="address" itemscope itemtype="http://schema.org/PostalAddress")
 
                     tr
                         td: svg: use(xlink:href="/assets/images/_sprites/symbols.svg#footer-1-address")
-                        td(itemprop="streetAddress" translate="no") 00 Locus Viae
+                        td(itemprop="streetAddress" translate="no") 
                     tr
                         td
-                        td(itemprop="addressLocality") Urbs Nomine
+                        td(itemprop="addressLocality")
                     tr
                         td
-                        td(itemprop="postalCode") 0000
+                        td(itemprop="postalCode")
                     tr
                         td
-                        td(itemprop="addressCountry") Patriam Nomine
+                        td(itemprop="addressCountry")
                     tr
                         td: svg: use(use xlink:href="/assets/images/_sprites/symbols.svg#footer-1-phone")
                         td: a(href="tel:00-00-000-0000" itemprop="telephone") (+00) 000-000-0000
-                    tr
-                        td: svg: use(xlink:href="/assets/images/_sprites/symbols.svg#footer-1-location")
-                        td: a(href="#" itemprop="maps") 00&deg;00'00"S 00&deg;00'00"E
