--- a/src/components/footers/2/_.pug
+++ b/src/components/footers/2/_.pug
@@ -30,7 +30,7 @@ footer(
                 li: a(href="#") Aute irure dolor
                 li: a(href="#") In reprehenderit in
 
-        div
+      //  div
 
             table(class="vcard")
 
