--- a/src/components/footers/2/_.pug
+++ b/src/components/footers/2/_.pug
@@ -38,7 +38,7 @@ footer(
 
                     tr
 
-                        th(colspan="2" class="org") Ordinem Nomine
+                        th(colspan="2" class="org") Entity eCommerce
 
                 tbody
 
