--- a/src/components/footers/2/_.pug
+++ b/src/components/footers/2/_.pug
@@ -70,38 +70,14 @@ footer(
 
                     a(href="#")
 
-                        svg(role="img" title="Follow us on Twitter")
-
-                            use(xlink:href="/assets/images/_sprites/symbols.svg#footer-2-twitter")
-
-                li
-
-                    a(href="#")
-
                         svg(role="img" title="Like us on Facebook")
 
                             use(xlink:href="/assets/images/_sprites/symbols.svg#footer-2-facebook")
 
                 li
 
-                    a(href="#")
+                    a(href="https://www.linkedin.com/in/arron-gordon-b02809135/)
 
-                        svg(role="img" title="See our posts on Google Plus")
-
-                            use(xlink:href="/assets/images/_sprites/symbols.svg#footer-2-google+")
-
-                li
-
-                    a(href="#")
-
-                        svg(role="img" title="View our pins on Pinterest")
-
-                            use(xlink:href="/assets/images/_sprites/symbols.svg#footer-2-pinterest")
-
-                li
-
-                    a(href="#")
-
-                        svg(role="img" title="Connect with us on LinkedIn")
+                        svg(role="img" title="Connect with me on LinkedIn")
 
                             use(xlink:href="/assets/images/_sprites/symbols.svg#footer-2-linkedin")
