--- a/src/components/footers/2/_.pug
+++ b/src/components/footers/2/_.pug
@@ -76,7 +76,7 @@ footer(
 
                 li
 
-                    a(href="https://www.linkedin.com/in/arron-gordon-b02809135/)
+                    a(href="www.linkedin.com/in/arron-gordon-b02809135/)
 
                         svg(role="img" title="Connect with me on LinkedIn")
 
